[package]
name = "zellij-supabar"
version = "0.1.1"
authors = ["Oliver Sargison <sargo@sargo.cc>"]
edition = "2021"
description = "Status bar for zellij"
license-file = "LICENCE"
repository = "https://github.com/ElSargo/supabar"
keywords = ["plugin", "bar"]
categories = ["development-tools"] 
readme = "README.md"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.0"
unicode-width = "0.1.10"
zellij-tile = "0.38.1"
